Fix dark mode bg behind notch, cleanup

--- a/source/stylesheets/partials/_base.scss
+++ b/source/stylesheets/partials/_base.scss
@@ -278,12 +278,7 @@ hr {
   margin-left: auto;
   margin-right: auto;
 }
-.pull-right {
-  float: right !important;
-}
-.pull-left {
-  float: left !important;
-}
+
 .color-primary {
   color: var(--color-primary);
 }
